# work

./: CMakeLists.txt  README.md  README.txt  cell.spi  cells.spi  layout_plot.py  main.cpp  placementData - 参考原样本.json  placementData - 参考样本.json  placementData - 改样本.json  placementData.json  vcpkg.json
code/text1/: CMakeLists.txt  main.cpp
code/text1/database/: database.h
code/text1/exporter/: exporter.cpp  exporter.h
code/text1/parser/: parser.cpp  parser.h
code/text1/placement/: placement.cpp  placement.h
code/text1/swap/: swap.cpp  swap.h
database/: database.cpp  database.h
datebase/: database.cpp  datebase.h
exporter/: exporter.cpp  exporter.h
parser/: parser.cpp  parser.h
placement/: placement.cpp  placement.h
project/work1/database/: database.cpp  datebase.h
project/work1/parser/: parser.cpp  parser.h
